fix alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
 body {
-  text-align: center;
-}  
+    display: table-cell;
+    vertical-align: middle;
+}
